one-dto-mapper-derive/tests/compile_fail/missing_attribute.stderr
error: Missing attribute '#[from(...)]'
 --> tests/compile_fail/missing_attribute.rs:3:10
  |
3 | #[derive(From)]
  |          ^^^^
  |
  = note: this error originates in the derive macro `From` (in Nightly builds, run with -Z macro-backtrace for more info)
